--- a/src/blocks/card/card.css
+++ b/src/blocks/card/card.css
@@ -14,7 +14,7 @@
 
 .card {
   max-width: 270px;
-  height: 425px;
+  max-height: 425px;
   box-sizing: border-box;
   border-radius: 5px;
   box-shadow: 0px 0px 20px rgba(167, 167, 167, 0.26);
